[gd_scene load_steps=4 format=3 uid="uid://dt0uyv7ahibyw"]

[ext_resource type="Script" path="res://Scene/gui_test.gd" id="1_1j546"]
[ext_resource type="PackedScene" uid="uid://dp52k7b127jqu" path="res://Components/StatPage/stat_page.tscn" id="2_rl5ni"]
[ext_resource type="PackedScene" uid="uid://bacyjpg0bhic6" path="res://Scene/mon_ui.tscn" id="3_kgr6c"]

[node name="gui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1j546")

[node name="left" type="Control" parent="."]
layout_mode = 1
anchor_right = 0.273
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 3.0
offset_right = 0.279999
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="player_props" type="PanelContainer" parent="left"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="player_stat_page" parent="left/player_props" instance=ExtResource("2_rl5ni")]
unique_name_in_owner = true
layout_mode = 2

[node name="center" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.283
anchor_right = 0.717
anchor_bottom = 1.0
offset_left = -0.12001
offset_top = 4.0
offset_right = 0.119995
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="ctrl_panel" type="PanelContainer" parent="center"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="free_el" type="Control" parent="center/ctrl_panel"]
layout_mode = 2

[node name="Attack" type="Button" parent="center/ctrl_panel/free_el"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.92
anchor_bottom = 0.92
offset_left = 22.0
offset_top = -16.92
offset_right = 80.0
offset_bottom = 14.08
text = "Attack"

[node name="mon_ui" parent="center/ctrl_panel/free_el" instance=ExtResource("3_kgr6c")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
hp = 100
mp = 100

[node name="right" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.725
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2

[node name="mon_props" type="PanelContainer" parent="right"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="mon_stat_page" parent="right/mon_props" instance=ExtResource("2_rl5ni")]
unique_name_in_owner = true
layout_mode = 2
